spacing fixes of hero terminal + added hero bg gradient

--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -18,8 +18,8 @@ a:hover {
   text-align: center;
   padding-left: min(1.5rem, 10%); 
   padding-right: min(1.5rem, 10%);
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 0.9em;
+  padding-bottom: 0.9em;
   cursor: pointer;
 } .btn:hover {
     text-decoration: none;
