--- a/public/styles/x.css
+++ b/public/styles/x.css
@@ -1,12 +1,12 @@
-.wrapper {
+/* .wrapper {
   width: 100%;
-  /* padding: 0 4em;  */
   overflow: hidden;
 
-}
+} */
+
 .container {
   /* background: blue; */
-  padding: 0.8em 0;
+  padding: 0.7em 0;
   max-width: 1150px;
   width: min(100% - 3rem, 1150px);
   margin-inline: auto;
@@ -19,6 +19,8 @@ ul {
 
 #header.wrapper {
   position: fixed;
+  width: 100%;
+  overflow: hidden;
   z-index: 999;
   background: var(--color-bg);
 }
@@ -44,7 +46,7 @@ ul {
     .header__nav ul {
       display: flex;
       color: var(--color-text);
-      gap: 2em;
+      gap: 2.5em;
     } 
 
     .header__nav a,
@@ -66,21 +68,21 @@ ul {
     width: 6em;
   }
 
-  
 
 
 #hero.wrapper {
   width: 100%;
+  background: radial-gradient(40em at bottom, #111111, #000);
 }
 
-.hero-flex-x {
+.hero__flex-x {
   display: flex;
   justify-content: center;
   /* background: red;  */
   height: 100vh;
 }
 
-.hero-flex-y {
+.hero__flex-y {
   /* display: flex;
   justify-content: center; */
   margin-top: 5em;
@@ -92,11 +94,8 @@ ul {
   padding: 1em;
 }
 
-.hero-content img {
-  max-width: 10em;
-}
 
-.hero-header {
+.hero__header {
   margin: 0 auto;
   text-align: center;
   /* display: flex;
@@ -106,34 +105,34 @@ ul {
   padding: 0.5em; */
 }
 
-.hero-block {
+.hero__block {
   margin-top: 2em;
   background: url('../assets/terminal.svg') no-repeat center top;
   background-size: 100%;
   width: clamp(100%, 100vw, 45rem);
   height: 100%;
-  padding: 4rem 2rem;
+  padding: 2.5rem 2rem;
 }
 
-#hero.wrapper {
+/* #hero.wrapper {
   background: url('../assets/bg-pattern-dark.svg') no-repeat center bottom;
-  /* background-size: 100%; */
-}
+  background-size: 100%; 
+} */
 
-#hero.wrapper::before {
+/* #hero.wrapper::before {
   background: url('../assets/rabbit.png') no-repeat center bottom;
   position: absolute;
   bottom: 0;
   width: 10em;
   height: 10em;
-}
+} */
 
-#hero .signup {
+.signup {
   display: flex;
-  margin: 2.5em;
+  margin: 1.5em 2.5em;
   justify-content: space-around;
   padding: 0.2em;
-  border-radius: 0.2em;
+  border-radius: 0.3em;
   background-color: #242424;
 }
 
@@ -156,10 +155,10 @@ ul {
   margin: 0 auto;
   letter-spacing: .15em;
   animation: 
-  typing 2s steps(40, end),
-  blink-caret 2s step-end infinite;
-  color: var(--color-primary);
-  font-size: 1.1rem;
+    typing 2.5s steps(40, end),
+    blink-caret 2s step-end infinite;
+    color: var(--color-primary);
+    font-size: 1.1rem;
   /* color: #C1FFC1; */
 }
 
@@ -174,7 +173,7 @@ ul {
 }
 
 #hero input {
-  padding: 1.25em;
+  padding: 1em;
   background-color: #242424;
   color: white;
   width: 100%;
